--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "node": ">= 0.4.7"
   },
   "dependencies": {
-    "coffee-script": ">= 1.0.1",
-    "async": ">= 0.1.9",
-    "redis-node": ">= 0.4.0",
-    "hook.io": ">= 0.7.7",
-    "long-stack-traces": ">= 0.1.2",
-    "node-uuid": "1.2.0"
+    "coffee-script": ">= 1.0.1"
+    ,"async": ">= 0.1.9"
+    ,"redis-node": ">= 0.4.0"
+    ,"hook.io": ">= 0.7.7"
+    ,"long-stack-traces": ">= 0.1.2"
+    ,"node-uuid": "1.2.0"
+    ,"underscore": ">= 1.2.0"
   },
   "devDependencies": {}
 }
